--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,3 +10,9 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
+
+ENV NODE_ENV=development
+
+EXPOSE 5173
+
+CMD ["npm", "run", "dev", "--", "--config", "vite.hmr.config.js"]
