--- a/.nginx/sites-available/dev.conf
+++ b/.nginx/sites-available/dev.conf
@@ -1,15 +1,13 @@
 server {
-    #listen 80;
-    #server_name _; # Replace with your domain name
+    listen 80;
+    server_name localhost; # Replace with your domain name
 
     location / {
-
+        proxy_pass http://127.0.0.1:5173;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
-
-        proxy_pass http://client:5173;
     }
 }
