--- a/client/package.json
+++ b/client/package.json
@@ -20,13 +20,14 @@
     "@playwright/test": "^1.31.1",
     "@types/jsdom": "^21.1.0",
     "@types/node": "^18.14.2",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^4.1.0",
     "@vue/test-utils": "^2.3.0",
     "@vue/tsconfig": "^0.1.3",
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
+    "vite-plugin-checker": "^0.5.6",
     "vitest": "^0.29.1",
     "vue-tsc": "^1.2.0"
   }
